<resources>
    <string name="app_name">SantanderDevWeek</string>
    <string name="txt_saldo_disponivel">Saldo disponivel</string>
    <string name="txt_saldo_limite">Saldo - limite</string>
    <string name="txt_cartao_final">Cartão final</string>
    <string name="txt_recarregar">Recarregar</string>
    <string name="txt_tranferir">Tranferir</string>
    <string name="txt_pagar">Pagar</string>
    <string name="txt_ver_extrato">Ver Extrato</string>
</resources>