<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.MainActivity">

    <androidx.appcompat.widget.Toolbar
        android:id="@+id/toolbar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="?attr/colorPrimary"
        android:minHeight="?attr/actionBarSize"
        android:theme="?attr/actionBarTheme"
        android:layout_centerHorizontal="true"
        android:gravity="center"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" >

        <com.google.android.material.imageview.ShapeableImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/ic_santander_logo"
            android:layout_gravity="center"
            android:layout_marginRight="8dp" />

        <com.google.android.material.textview.MaterialTextView
            android:id="@+id/txt_santander"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="Santander"
            android:textColor="@color/white"
            android:textStyle="bold"
            android:textSize="20sp"
            android:layout_gravity="center_horizontal"
            />

        <com.google.android.material.imageview.ShapeableImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/ic_notifications_white"
            android:layout_gravity="end"
            android:layout_marginRight="16dp" />
    </androidx.appcompat.widget.Toolbar>

    <ImageView
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:background="@color/redPrimary"
        app:layout_constraintDimensionRatio="16:6"
        app:layout_constraintTop_toBottomOf="@id/toolbar"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"/>

    <TextView
        android:id="@+id/tv_user_greetings"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="Olá, "
        android:textColor="@android:color/white"
        android:layout_margin="16dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/toolbar"/>

    <TextView
        android:id="@+id/tv_user_agency"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="Ag. 0000"
        android:textColor="@android:color/white"
        android:textStyle="bold"
        android:layout_marginTop="6dp"
        app:layout_constraintTop_toBottomOf="@id/tv_user_greetings"
        app:layout_constraintStart_toStartOf="@id/tv_user_greetings" />

    <TextView
        android:id="@+id/tv_user_account"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="CC 0000000-0"
        android:textColor="@android:color/white"
        android:textStyle="bold"
        android:layout_marginLeft="16dp"
        app:layout_constraintTop_toTopOf="@id/tv_user_agency"
        app:layout_constraintLeft_toRightOf="@id/tv_user_agency" />

    <com.google.android.material.card.MaterialCardView
        android:id="@+id/mcv_saldo"
        android:layout_width="0dp"
        android:layout_height="200dp"
        android:layout_marginTop="32dp"
        android:layout_marginLeft="16dp"
        android:layout_marginRight="16dp"
        app:layout_constraintTop_toBottomOf="@id/tv_user_agency"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent">


        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <ImageView
                android:id="@+id/iv_reload_data"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="16dp"
                android:src="@drawable/ic_update_black"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintStart_toStartOf="parent" />

            <TextView
                android:id="@+id/tv_saldo_disponivel"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="16dp"
                android:text="@string/txt_saldo_disponivel"
                android:textSize="18sp"
                app:layout_constraintTop_toTopOf="@id/iv_reload_data"
                app:layout_constraintLeft_toRightOf="@id/iv_reload_data"
                app:layout_constraintBottom_toBottomOf="@id/iv_reload_data"
                android:layout_marginStart="16dp" />

            <ImageView
                android:id="@+id/iv_expand_less"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="16dp"
                android:src="@drawable/ic_expand_less_black"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintEnd_toEndOf="parent" />

            <TextView
                android:id="@+id/tv_saldo"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="R$ 0.000,00"
                android:textSize="24sp"
                android:textStyle="bold"
                android:textColor="@color/black"
                android:layout_marginTop="24dp"
                android:layout_marginLeft="16dp"
                app:layout_constraintTop_toBottomOf="@id/tv_saldo_disponivel"
                app:layout_constraintStart_toStartOf="parent"
                android:layout_marginStart="16dp" />

            <TextView
                android:id="@+id/tv_saldo_limite"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/txt_saldo_limite"
                android:layout_marginLeft="16dp"
                app:layout_constraintTop_toBottomOf="@id/tv_saldo"
                app:layout_constraintStart_toStartOf="parent"
                android:layout_marginStart="16dp" />

            <TextView
                android:id="@+id/tv_value_limit"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="R$ 0.000,00"
                android:layout_marginLeft="8dp"
                app:layout_constraintTop_toBottomOf="@id/tv_saldo"
                app:layout_constraintStart_toEndOf="@id/tv_saldo_limite"
                android:layout_marginStart="8dp" />
            <View
                android:id="@+id/v_dot_balance"
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:background="@android:color/darker_gray"
                android:layout_margin="16dp"
                app:layout_constraintTop_toBottomOf="@id/tv_saldo_limite"/>

            <TextView
                android:id="@+id/tv_show_balance"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="16dp"
                android:text="@string/txt_ver_extrato"
                android:textColor="@color/redSecondary"
                app:layout_constraintTop_toBottomOf="@id/v_dot_balance"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintRight_toRightOf="parent"
                app:layout_constraintBottom_toBottomOf="parent" />

        </androidx.constraintlayout.widget.ConstraintLayout>
    </com.google.android.material.card.MaterialCardView>

    <com.google.android.material.card.MaterialCardView
        android:id="@+id/mcv_pay"
        android:layout_width="110dp"
        android:layout_height="110dp"
        android:layout_marginTop="32dp"
        android:layout_marginLeft="16dp"
        app:layout_constraintTop_toBottomOf="@id/mcv_saldo"
        app:layout_constraintStart_toStartOf="parent">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_height="match_parent"
            android:layout_width="match_parent">
            <ImageView
                android:id="@+id/iv_pay_bar"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:src="@drawable/ic_bar"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintBottom_toBottomOf="@id/txt_pay"
                />

            <TextView
                android:id="@+id/txt_pay"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/txt_pagar"
                app:layout_constraintTop_toBottomOf="@id/iv_pay_bar"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintRight_toRightOf="parent"
                app:layout_constraintBottom_toBottomOf="parent"/>

        </androidx.constraintlayout.widget.ConstraintLayout>
    </com.google.android.material.card.MaterialCardView>

    <com.google.android.material.card.MaterialCardView
        android:id="@+id/mcv_transfer"
        android:layout_width="110dp"
        android:layout_height="110dp"
        android:layout_marginTop="32dp"
        android:layout_marginLeft="16dp"
        android:layout_marginRight="16dp"
        app:layout_constraintTop_toBottomOf="@id/mcv_saldo"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_height="match_parent"
            android:layout_width="match_parent">
            <ImageView
                android:id="@+id/iv_transfer"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:src="@drawable/ic_payments"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintBottom_toBottomOf="@id/txt_transfer"
                />

            <TextView
                android:id="@+id/txt_transfer"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/txt_tranferir"
                app:layout_constraintTop_toBottomOf="@id/iv_transfer"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintRight_toRightOf="parent"
                app:layout_constraintBottom_toBottomOf="parent"/>
        </androidx.constraintlayout.widget.ConstraintLayout>
    </com.google.android.material.card.MaterialCardView>

    <com.google.android.material.card.MaterialCardView
        android:id="@+id/mcv_recharge"
        android:layout_width="110dp"
        android:layout_height="110dp"
        android:layout_marginTop="32dp"
        android:layout_marginRight="16dp"
        app:layout_constraintTop_toBottomOf="@id/mcv_saldo"
        app:layout_constraintEnd_toEndOf="parent">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_height="match_parent"
            android:layout_width="match_parent">
            <ImageView
                android:id="@+id/iv_recharge"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:src="@drawable/ic_phone_update"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintBottom_toBottomOf="@id/txt_recharge"
                />

            <TextView
                android:id="@+id/txt_recharge"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/txt_recarregar"
                app:layout_constraintTop_toBottomOf="@id/iv_recharge"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintRight_toRightOf="parent"
                app:layout_constraintBottom_toBottomOf="parent"/>

        </androidx.constraintlayout.widget.ConstraintLayout>
    </com.google.android.material.card.MaterialCardView>

    <ImageView
        android:id="@+id/iv_final_digits"
        android:layout_width="0dp"
        android:layout_height="60dp"
        android:layout_margin="16dp"
        android:background="@color/redPrimary"
        app:layout_constraintTop_toBottomOf="@id/mcv_transfer"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"/>

    <TextView
        android:id="@+id/tv_txt_final_digits"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/txt_cartao_final"
        android:textSize="20sp"
        android:layout_marginLeft="16dp"
        android:textColor="@color/white"
        app:layout_constraintTop_toTopOf="@id/iv_final_digits"
        app:layout_constraintLeft_toLeftOf="@id/iv_final_digits"
        app:layout_constraintBottom_toBottomOf="@id/iv_final_digits"
        android:layout_marginStart="16dp" />

    <TextView
        android:id="@+id/tv_value_final_digits"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="0000"
        android:textStyle="bold"
        android:textSize="20sp"
        android:layout_marginLeft="16dp"
        android:textColor="@color/white"
        app:layout_constraintTop_toTopOf="@id/iv_final_digits"
        app:layout_constraintLeft_toRightOf="@id/tv_txt_final_digits"
        app:layout_constraintBottom_toBottomOf="@id/iv_final_digits"
        android:layout_marginStart="16dp" />

    <ImageView
        android:id="@+id/iv_less_more"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:src="@drawable/ic_expand_more_white"
        android:layout_marginRight="16dp"
        android:textColor="@color/white"
        app:layout_constraintTop_toTopOf="@id/iv_final_digits"
        app:layout_constraintRight_toRightOf="@id/iv_final_digits"
        app:layout_constraintBottom_toBottomOf="@id/iv_final_digits"
        android:layout_marginEnd="16dp" />

</androidx.constraintlayout.widget.ConstraintLayout>